--- a/TP/src/styles.css
+++ b/TP/src/styles.css
@@ -1,6 +1,6 @@
 body {
     color: #353535;
-    font-family: Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background: url(http://i.imgur.com/GHr12sH.jpg) no-repeat center center fixed;
 	background-size: cover;
 }
@@ -11,8 +11,9 @@ nav {
     padding-bottom: 3px;
 }
 
-header img {
-    height: 50%;
+nav h2 {
+    color: white;
+    margin-left: 10px;
 }
 
 @media screen and (max-width: 991px){
@@ -21,27 +22,7 @@ header img {
     }
 }
 
-.form-estac input,
-.form-estac button {
-    font-size: 18px;
-	margin: 16px 0;
-}
-
-#spinner {
-    position: absolute;
-    width: 50vw;
-    background-color: white;
-    top: 20vw;
-    left: 0px;
-    margin-left: 20%;
-    width: 35vh;
-}
-
-#spinner-img {
-    width: 35vh;
-    height: 35vh;
-}
-
-#spinner-txt {
-    margin-left: 10px;
+.row {
+    width: 100%;
+    margin-left: 0px !important;
 }
