--- a/Frontend/src/app/pages/retistro/registro.component.html
+++ b/Frontend/src/app/pages/retistro/registro.component.html
@@ -19,7 +19,7 @@
                             <input [(ngModel)]="confirmPass" type="password" class="form-control" name="pass" placeholder="Confirmar contraseña">
                         </div>   
                         <br>
-                        <select [(ngModel)]="type" class="form-control">
+                        <select [(ngModel)]="type" name="type" class="form-control">
                             <option disabled selected>Tipo de usuario</option>
                             <option>Mozo</option>
                             <option>Cocinero</option>
