--- a/Frontend/src/app/pages/retistro/registro.component.html
+++ b/Frontend/src/app/pages/retistro/registro.component.html
@@ -26,6 +26,8 @@
                             <option>Encargado</option>
                         </select>   
                         <br>
+                        <re-captcha (resolved)="resolved($event)" siteKey="6LcTl3kUAAAAAJ_Tdq81-dmz3dK5hlbFAGxUl90K"></re-captcha>
+                        <br>
                         <span class="text-warning">
                             {{errorMsg}}
                         </span>
