--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -191,3 +191,14 @@
     </div>
 
 </div>
+
+<!-- 
+
+    - Pedido
+    - Cantidad
+    - Estado
+    -Ver detalle 
+        - Codigo alfanumercio
+        - Tomado por quien
+
+-->
