alata de pedidos

--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -18,7 +18,9 @@
                         </select>
                     </div>
                     <div class="btn-group" role="group">
-                        <button onclick="getPedidos()" type="button" class="btn btn-primary">Actualizar</button>
+                        <button type="button" class="btn btn-primary">Actualizar</button>
+                        <button [routerLink]="['/formulario']" type="button" class="btn btn-secondary">Nuevo</button>
+                        <button type="button" class="btn btn-info">Estadísticas</button>
                     </div>
                 </div>
                 <table id="tabla-pedidos" class="table mt-3">
@@ -27,6 +29,7 @@
                             <th scope="col">Pedido</th>
                             <th scope="col">Cantidad</th>
                             <th scope="col">Estado</th>
+                            <th scope="col">Detalle</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -41,6 +44,7 @@
                                         <option>Terminado</option>
                                     </select>
                                 </td>
+                                <td><button>ver</button></td>
                             </tr>
                             <tr>
                                 <td>Vino</td>
@@ -71,75 +75,6 @@
             </div>
         </div>     
     </div>           
-
-    <div class="modal fade" id="pedidos-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="resetForm()">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="numeroMesa">Número de mesa</label>
-                            <select required class="form-control" id="numeroMesa">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
-                            <div class="invalid-feedback" id="numeroMesaError">Número de mesa incorrecto</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="nombreCliente">Nombre de cliente</label>
-                            <input type="text" class="form-control" required id="nombreCliente" placeholder="Nombre del cliente">
-                            <div class="invalid-feedback" id="nombreClienteError">Debe indicar el nombre del cliente</div>
-                        </div>
-                        <div class="card">
-                            <div class="card-body">
-                                <form>
-                                    <div id="lista-elementos"> 
-                                        <div class="form-row pedido-elemento mt-1" id="form-row-0">
-                                            <div class="col-7">
-                                                <select required class="form-control" id="select-0" onchange="setPrecio()">
-                                                    <option>Vino tinto</option>
-                                                    <option>Vino blanco</option>
-                                                    <option>Cerveza rubia</option>
-                                                    <option>Cerveza negra</option>
-                                                    <option>Empanada</option>
-                                                    <option>Tarta</option>
-                                                    <option>Alfajor</option>
-                                                    <option>Torta</option>
-                                                </select>
-                                                <div class="invalid-feedback" id="errorEl-0">El tipo de elemento seleccionado es invalid</div>
-                                            </div>
-                                            <div class="col-3">
-                                                <input type="number" id="num-0" required class="form-control" placeholder="Cantidad" oninput="setPrecio()">
-                                                <div class="invalid-feedback" id="errorNum-0">Indique el número</div>
-                                            </div>
-                                            <div class="col col-2">
-                                                <button type="button" class="btn btn-secondary" onclick="removeElemento(0)">X</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <button type="button" class="btn btn-primary mt-1" onclick="addElemento()">Agregar elemento</button>
-                                </form>
-                            </div>
-                        </div>
-                        <b>Precio: $<span id="precio-form">0</span></b>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="resetForm()">Cancelar</button>
-                    <button type="button" class="btn btn-success" onclick="cargarPedido()">Cargar</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="spinner-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
