--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -20,7 +20,7 @@
                     <div class="btn-group" role="group">
                         <button type="button" class="btn btn-primary">Actualizar</button>
                         <button [routerLink]="['/formulario']" type="button" class="btn btn-secondary">Nuevo</button>
-                        <button type="button" class="btn btn-info">Estadísticas</button>
+                        <button [routerLink]="['/estadisticas']" type="button" class="btn btn-info">Estadísticas</button>
                     </div>
                 </div>
                 <table id="tabla-pedidos" class="table mt-3">
