--- a/Frontend/src/app/pages/estadisticas/estadisticas.component.html
+++ b/Frontend/src/app/pages/estadisticas/estadisticas.component.html
@@ -2,7 +2,7 @@
     <div class="col col-12 col-md-8">
         <div class="card">
             <div class="card-header">
-                <h3>EStadisticas</h3>
+                <h3>Estadisticas</h3>
             </div>
             <div class="card-body">
                 <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
@@ -13,7 +13,9 @@
                 <br/>
                 <div class="card">
                     <div class="card-body">
-                        <div id="container" style="width:100%; height:400px;"></div>
+                        <div id="containerItems" style="width:100%; height:400px;"></div>
+                        <div id="containerMesas" style="width:100%; height:400px;"></div>
+                        <div id="containerMozo" style="width:100%; height:400px;"></div>
                     </div>
                 </div>
             </div>
