--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -50,6 +50,11 @@
                 </table>
             </div>
         </div>     
+
+        <br/>
+        <button (click)="logout()" type="button" class="btn btn-danger btn-lg btn-block">Logout</button>
+        <br/>
+
     </div>           
 
     <!-- Modal -->
