--- a/Frontend/src/app/pages/estadisticas/estadisticas.component.html
+++ b/Frontend/src/app/pages/estadisticas/estadisticas.component.html
@@ -14,8 +14,23 @@
                 <div class="card">
                     <div class="card-body">
                         <div id="containerItems" style="width:100%; height:400px;"></div>
+                        <button (click)="this.exportItemsExcel()" class="btn-info btn-sm">Descargar en formato Excel</button>
+                        <br/>
+                    </div>
+                </div>
+                <br/>
+                <div class="card">
+                    <div class="card-body">
                         <div id="containerMesas" style="width:100%; height:400px;"></div>
+                        <button (click)="this.exportMesasExcel()" class="btn-info btn-sm">Descargar en formato Excel</button>
+                    </div>
+                </div>
+                <br/>
+                <div class="card">
+                    <div class="card-body">
                         <div id="containerMozo" style="width:100%; height:400px;"></div>
+                        <button (click)="this.exportMozosExcel()" class="btn-info btn-sm">Descargar en formato Excel</button>
+                        <br/>
                     </div>
                 </div>
             </div>
