--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -33,8 +33,12 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let ped of pedidos">
-                                <td>{{ped.nombre}}</td>
+                            <tr *ngFor="let ped of pedidos" RowHighlight>
+                                <td>
+                                    <span 
+                                        Highlight
+                                        [highlightColor]='isCurrentUser(ped.mozo)'>{{ped.nombre}}</span>
+                                </td>
                                 <td>{{ped.cantidad}}</td>
                                 <td>
                                     <select [(ngModel)]="ped.estado" id="select-vino-1" class="form-control">
