--- a/Frontend/src/app/pages/estadisticas/estadisticas.component.html
+++ b/Frontend/src/app/pages/estadisticas/estadisticas.component.html
@@ -14,7 +14,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div id="containerItems" style="width:100%; height:400px;"></div>
-                        <button (click)="this.exportItemsExcel()" class="btn-info btn-sm">Descargar en formato Excel</button>
+                        <button CargandoDir (click)="this.exportItemsExcel()" class="btn-info btn-sm">Descargar en formato Excel</button>
                         <br/>
                     </div>
                 </div>
