--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -111,3 +111,7 @@
     </div>
 
 </div>
+
+<div id="footer">
+    <button class="btn btn-small btn-secondary" [routerLink]="['informacion']">Sobre nosotros</button>
+</div>
