--- a/Frontend/src/app/pages/registro/registro.component.html
+++ b/Frontend/src/app/pages/registro/registro.component.html
@@ -32,6 +32,7 @@
                             {{errorMsg}}
                         </span>
                         <input type="button" class="btn btn-lg btn-primary btn-block" value="Registrarse" (click)="registro()" />  
+                        ¿Ya trenés cuenta? <a [routerLink]="['/login']">Iniciá sesion</a>
                     </form>
                 </div>
             </div>
