--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -2,7 +2,8 @@ body {
     color: #353535;
     font-family: Arial, Helvetica, sans-serif;
     background: url(http://i.imgur.com/GHr12sH.jpg) no-repeat center center fixed;
-	background-size: cover;
+    background-size: cover;
+    min-height: 100%;
 }
 
 nav {
@@ -25,6 +26,7 @@ nav h2 {
 .row {
     width: 100%;
     margin-left: 0px !important;
+    min-height: 78vh !important;
 }
 
 .invisible-btn {
