--- a/Frontend/src/app/pages/informacion/informacion.component.html
+++ b/Frontend/src/app/pages/informacion/informacion.component.html
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group" role="group">
-                        <button [routerLink]="['/registro']" type="button" class="btn btn-secondary">Volver</button>
+                        <button [routerLink]="['/']" type="button" class="btn btn-secondary">Volver</button>
                     </div>
                 </div>
                 <br/>
@@ -20,6 +20,7 @@
                 </div>
             </div>
         </div>     
+        <br/>
     </div>           
 
 </div>
