--- a/Frontend/src/app/pages/login/login.component.html
+++ b/Frontend/src/app/pages/login/login.component.html
@@ -6,23 +6,21 @@
                     <h3>Login</h3>
                 </div>
                 <div class="card-body">
-                    <form action="#">
-                        <div class="input-group">
-                            <input [(ngModel)]="usr" type="text" class="form-control" name="usr" placeholder="Usuario">
-                            <div class="invalid-feedback" id="usuarioError">Nombre de usuario equivocado</div>
-                        </div>
-                        <br>
-                        <div class="input-group">
-                            <input [(ngModel)]="pass" type="password" class="form-control" name="pass" placeholder="Contraseña">
-                            <div class="invalid-feedback" id="contraError">Contraseña incorrecta</div>
-                        </div>   
-                        <br>
-                        <span class="text-warning">
-                            {{errorMsg}}
-                        </span>
-                        <input type="button" class="btn btn-lg btn-primary btn-block" value="Ingresar" (click)="login()" />  
-                        ¿No trenés cuenta? <a [routerLink]="['/registro']">Registrate</a>
-                    </form>
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
+                        <input [(ngModel)]="usr" type="text" pInputText placeholder="Usuario">         
+                    </div>
+                    <br>
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-key"></i></span>
+                        <input [(ngModel)]="pass" type="password" pInputText placeholder="Password">         
+                    </div>
+                    <br>
+                    <span class="text-warning">
+                        {{errorMsg}}
+                    </span>
+                    <button type="button" class="btn btn-lg btn-primary btn-block" (click)="login()">Ingresar</button>  
+                    ¿No trenés cuenta? <a [routerLink]="['/registro']">Registrate</a>
                 </div>
             </div>
                             
