--- a/Frontend/src/app/pages/registro/registro.component.html
+++ b/Frontend/src/app/pages/registro/registro.component.html
@@ -6,34 +6,35 @@
                     <h3>Registro</h3>
                 </div>
                 <div class="card-body">
-                    <form action="#">
-                        <div class="input-group">
-                            <input [(ngModel)]="usr" type="text" class="form-control" name="usr" placeholder="Usuario">
-                        </div>
-                        <br>
-                        <div class="input-group">
-                            <input [(ngModel)]="pass" type="password" class="form-control" name="pass" placeholder="Contraseña">
-                        </div>
-                        <br>
-                        <div class="input-group">
-                            <input [(ngModel)]="confirmPass" type="password" class="form-control" name="pass" placeholder="Confirmar contraseña">
-                        </div>   
-                        <br>
-                        <select [(ngModel)]="type" name="type" class="form-control">
-                            <option disabled selected>Tipo de usuario</option>
-                            <option>Mozo</option>
-                            <option>Cocinero</option>
-                            <option>Encargado</option>
-                        </select>   
-                        <br>
-                        <re-captcha (resolved)="resolved($event)" siteKey="6LeAvXkUAAAAABEmWDheifWo_PFXmYKTpEdu7_e-"></re-captcha>
-                        <br>
-                        <span class="text-warning">
-                            {{errorMsg}}
-                        </span>
-                        <input type="button" class="btn btn-lg btn-primary btn-block" value="Registrarse" (click)="registro()" />  
-                        ¿Ya trenés cuenta? <a [routerLink]="['/login']">Iniciá sesion</a>
-                    </form>
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
+                        <input [(ngModel)]="usr" type="text" pInputText placeholder="Usuario">         
+                    </div>
+                    <br>
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-key"></i></span>
+                        <input [(ngModel)]="pass" type="password" pInputText placeholder="Contraseña">         
+                    </div>
+                    <br>
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-key"></i></span>
+                        <input [(ngModel)]="confirmPass" type="password" pInputText placeholder="Confirmar contraseña">         
+                    </div>
+                    <br>
+                    <select [(ngModel)]="type" name="type" class="form-control">
+                        <option disabled selected>Tipo de usuario</option>
+                        <option>Mozo</option>
+                        <option>Cocinero</option>
+                        <option>Encargado</option>
+                    </select>   
+                    <br>
+                    <re-captcha (resolved)="resolved($event)" siteKey="6LeAvXkUAAAAABEmWDheifWo_PFXmYKTpEdu7_e-"></re-captcha>
+                    <br>
+                    <span class="text-warning">
+                        {{errorMsg}}
+                    </span>
+                    <input type="button" class="btn btn-lg btn-primary btn-block" value="Registrarse" (click)="registro()" />  
+                    ¿Ya trenés cuenta? <a [routerLink]="['/login']">Iniciá sesion</a>
                 </div>
             </div>
                             
