--- a/Frontend/src/app/pages/login/login.component.html
+++ b/Frontend/src/app/pages/login/login.component.html
@@ -13,7 +13,7 @@
                     <br>
                     <div class="ui-inputgroup">
                         <span class="ui-inputgroup-addon"><i class="pi pi-key"></i></span>
-                        <input [(ngModel)]="pass" type="password" pPassword placeholder="Password">         
+                        <input [(ngModel)]="pass" type="password" pInputText placeholder="Password">         
                     </div>
                     <br>
                     <span class="text-warning">
