--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -12,14 +12,14 @@
                             <option value="Pendiente">Pendientes</option>
                             <option >En preparacion</option>
                             <option>Listo para servir</option>
-                            <option value="Terminado">Terminados</option>
-                            <option>Todos</option>
+                            <option UserDisabled [userType]="userType" value="Terminado">Terminados</option>
+                            <option UserDisabled [userType]="userType">Todos</option>
                         </select>
                     </div>
                     <div class="btn-group" role="group">
                         <button (click)="this.onFilterChange('Pendiente')" type="button" class="btn btn-primary"><i class="pi pi-refresh" style="font-size: 2em"></i></button>
-                        <button [routerLink]="['/formulario']" type="button" class="btn btn-secondary"><i class="pi pi-plus" style="font-size: 2em"></i></button>
-                        <button [routerLink]="['/estadisticas']" type="button" class="btn btn-info"><i class="pi pi-chart-bar" style="font-size: 2em"></i></button>
+                        <button *ngIf="userType == 'Mozo' || userType == 'Socio'" [routerLink]="['/formulario']" type="button" class="btn btn-secondary"><i class="pi pi-plus" style="font-size: 2em"></i></button>
+                        <button *ngIf="userType == 'Socio'" [routerLink]="['/estadisticas']" type="button" class="btn btn-info"><i class="pi pi-chart-bar" style="font-size: 2em"></i></button>
                     </div>
                 </div>
                 <br/>
